--- a/views/es/logout.hbs
+++ b/views/es/logout.hbs
@@ -10,10 +10,10 @@
 
             <div class="row center-align">
 
-            <h4>You're logged out!</h4>
-            <p>
-                <a href="/login" class="waves-effect waves-light btn">Log Back In</a>
-            </p>
+                <h4>¡Finalizaste tu sesión!</h4>
+                <p>
+                    <a href="/login" class="waves-effect waves-light btn">Ingresa de nuevo</a>
+                </p>
             </div>
         </div>
     </div>
@@ -23,23 +23,22 @@
 
 <script src="https://apis.google.com/js/platform.js?onload=logoutOfGoogle" async defer></script>
 <script type="text/javascript">
-  function logoutOfGoogle () {
-    gapi.load('auth2', function() {
-      gapi.auth2.init({
-        client_id: '824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com'
-      }).then(data=>{
-        gapi.auth2.getAuthInstance().signOut();
-        console.log('logged out of google');
-      })
-    });
-  }
+    function logoutOfGoogle () {
+        gapi.load('auth2', function() {
+            gapi.auth2.init({
+                client_id: '824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com'
+            }).then(data=>{
+                gapi.auth2.getAuthInstance().signOut();
+                console.log('logged out of google');
+            })
+        });
+    }
 </script>
 {{> sole-config-frontend-js}}
 <script type="text/javascript">
-  // connect to parse server
-  Parse.initialize(soleConfig.appId);
-  Parse.serverURL = soleConfig.serverUrl;
-  Parse.User.logOut();
-  document.cookie = "sessionToken=; Max-Age=0";//remove the sessionToken from the cookie
-  document.cookie = "language=; Max-Age=0";//remove the language from the cookie
+    // connect to parse server
+    Parse.initialize(soleConfig.appId);
+    Parse.serverURL = soleConfig.serverUrl;
+    Parse.User.logOut();
+    document.cookie = "sessionToken=; Max-Age=0";//remove the sessionToken from the cookie
 </script>
