* Add language switch to the sidebar * Fix /fail failure

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -42,6 +42,20 @@
         <li><div class="divider"></div></li>
         <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only" href="/logout">Logout</a></li>
         <li><div class="divider hide-on-large-only hide-on-extra-large-only hide-on-small-and-down"></div></li>
+        <li>
+            <div class="row">
+                <div class="input-field col s10 offset-s1">
+                    <select id="sidebar-language">
+                        <option value="en">English</option>
+                        <option value="es">Español (Colombia)</option>
+                    </select>
+                    <label for="sidebar-language">Language</label>
+                </div>
+            </div>
+        </li>
+
+
+        <li><div class="divider"></div></li>
 
         <li>
             <div class="app-download-links">
