Feature: Colombia Spanish Translation  (#288)
* fix fb auth library
* hotfix for query parameters on new SOLE from question
* quick fix, bad character
* WIP Spanish view translation
* translating views to Spanish, added route update for privacy policy
* Added i18n library to project
* WIP starting out using i18n with the views
* WIP starting out using i18n with the views
* Spanish json update
* WIP i18n working with cookie across most views. sidebar still left. some translation left
* WIP i18n working with sidebar and most views. built up the object by visiting all the routes
* some more translation content
* translating views to Spanish
* prep `how` route for translation. update language object with the result
* consolidate admin views in a directory for admin views
* better organization for the views, last bit of i18n stuff for all default views
* WIP, reorganizing. Stuff is kinda not working great because I moved it around. eek! coming back to this tomorrow
* fix copy-and-paste bug
* LOADS of clean up
* Fix en.json file
* add handlebars helper to start cleaning up

--- a/views/fail.hbs
+++ b/views/fail.hbs
@@ -2,7 +2,7 @@
     <div class="col s12">
         <div class="card-panel">
 		  <div class="row center-align">
-              <img class="responsive-img" src="images/404.jpg" alt="Error!">
+              <img class="responsive-img" src="images/404.jpg" alt="{{{__ "Error!"}}}">
 		  </div>
       {{#if error}}
       <div class="row center-align">
@@ -14,12 +14,12 @@
 
                 <div class="row center-align">
                     <a class="red waves-effect waves-light btn" href="/">
-                        Take Me Home
+                        {{{__ "Take Me Home"}}}
                     </a>
                 </div>
             <div class="row center-align">
                 <a class="waves-effect waves-light btn" href="mailto:support@startsole.org"><i class="material-icons
-                right">mail</i>Contact Us</a>
+                right">mail</i>{{{__ "Contact Us"}}}</a>
             </div>
         </div>
     </div>
