--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,15 +19,15 @@
                     <div class="input-field col s12">
                         <i class="material-icons prefix">email</i>
                         <input id="email" type="email" name="email" class="validate" value="{{email}}">
-                        <label for="email">Email</label>
-                        <span class="helper-text" data-error="invalid email"></span>
+                        <label for="email">{{{__ "Email"}}}</label>
+                        <span class="helper-text" data-error="{{{__ "invalid email"}}}"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">security</i>
                         <input id="password" name="password" type="password" class="validate">
-                        <label for="password">Password</label>
+                        <label for="password">{{{__ "Password"}}}</label>
                     </div>
                 </div>
                 <div class="row">
@@ -42,12 +42,12 @@
                 </div>
                 <div class="row">
                     <div class="center col s12">
-                        Need an account? <a href="/register">Sign up here.</a>
+                        {{{__ "Need an account?"}}} <a href="/register">{{{__ "Sign up here."}}}</a>
                     </div>
                     <div class="center col s12">
                         <br>
                         <a href="#password-reset-modal" class="modal-trigger">
-                            Help! I forgot my password.
+                            {{{__ "Help! I forgot my password."}}}
                         </a>
                     </div>
                 </div>
@@ -58,23 +58,23 @@
 
 <div class="modal" id="password-reset-modal">
     <div class="modal-content">
-        <h4>Reset Password</h4>
-        <p>Enter your email below and we'll send you a link to reset your password.</p>
+        <h4>{{{__ "Reset Password"}}}</h4>
+        <p>{{{__ "Enter your email below and we'll send you a link to reset your password."}}}</p>
         <div class="row">
             <div class="input-field col s12 m6 offset-m3">
                 <input type="email" class="validate" id="password-reset-email">
                 <label for="password-reset-email">
-                    Email
+                    {{{__ "Email"}}}
                 </label>
             </div>
         </div>
     </div>
     <div class="modal-footer">
         <a class="modal-action modal-close waves-effect waves-red btn-flat">
-            Cancel
+            {{{__ "Cancel"}}}
         </a>
         <a class="modal-action modal-close waves-effect waves-green btn-flat" onclick="resetPassword()">
-            Send Reset Email
+            {{{__ "Send Reset Email"}}}
         </a>
     </div>
 </div>
@@ -88,14 +88,8 @@
 <div id="app-download-modal" class="modal bottom-sheet">
     <div class="modal-content">
         <div class="row center-align">
-            <h5>Try Our App!</h5>
+            <h5>{{{__ "Try Our App!"}}}</h5>
         </div>
-
-        <!--<ul>-->
-            <!--<li>Wirelessly connect to a projector</li>-->
-            <!--<li>Make and save observations</li>-->
-            <!--<li>View tutorials and tips</li>-->
-        <!--</ul>-->
         <div class="row center-align">
             <a href="https://itunes.apple.com/in/app/startsole-self-organized-learning-environment/id1097411683"  target="_blank">
                 <img src="images/logos/app-store-ios.png" class="img-responsive" alt="iTunes Download">
@@ -104,6 +98,6 @@
 
     </div>
     <div class="modal-footer">
-        <a class="modal-close waves-effect waves-green btn-flat">No Thanks</a>
+        <a class="modal-close waves-effect waves-green btn-flat">{{{__ "No Thanks"}}}</a>
     </div>
 </div>
