--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -10,9 +10,9 @@
 
             <div class="row center-align">
 
-            <h4>You're logged out!</h4>
+            <h4>{{{__ "You're logged out!"}}}</h4>
             <p>
-                <a href="/login" class="waves-effect waves-light btn">Log Back In</a>
+                <a href="/login" class="waves-effect waves-light btn">{{{__ "Log Back In"}}}</a>
             </p>
             </div>
         </div>
@@ -29,7 +29,6 @@
         client_id: '824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com'
       }).then(data=>{
         gapi.auth2.getAuthInstance().signOut();
-        console.log('logged out of google');
       })
     });
   }
