--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -8,7 +8,7 @@
             <a href="#" data-target="slide-out"
                class="sidenav-trigger"><i class="material-icons teal-text lighten-2">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a class="black-text" href="/logout">Logout</a></li>
+                <li><a class="black-text" href="/logout">{{{__ "Logout"}}}</a></li>
             </ul>
 
         </nav>
@@ -26,36 +26,35 @@
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><li><a class="waves-effect waves-light btn" href="/sole-create">Plan Lesson</a></li></li>
+        <li><li><a class="waves-effect waves-light btn" href="/sole-create">{{{__ "Plan Lesson"}}}</a></li></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>My Profile</a></li>
-        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
+        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>{{{__ "My Profile"}}}</a></li>
+        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>{{{__ "My SOLEs"}}}</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
-        <li><a class="waves-effect" href="/questions/mine"><i class="material-icons">question_answer</i>My Questions</a></li>
-        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
+        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>{{{__ "Explore Questions"}}}</a></li>
+        <li><a class="waves-effect" href="/questions/mine"><i class="material-icons">question_answer</i>{{{__ "My Questions"}}}</a></li>
+        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>{{{__ "Add a Question"}}}</a></li>
         <li><div class="divider"></div></li>
-        {{!-- <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li> --}}
-        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
-        <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
-        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Teacher Resources</a></li>
+        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>{{{__ "How to SOLE"}}}</a></li>
+        <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>{{{__ "History of StartSOLE"}}}</a></li>
+        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>{{{__ "Teacher Resources"}}}</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only" href="/logout">Logout</a></li>
+        <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only" href="/logout">{{{__ "Logout"}}}</a></li>
 
         <!--<li><div class="divider hide-on-large-only hide-on-extra-large-only hide-on-small-and-down"></div></li>-->
         <!--<li>-->
             <!--<div class="row">-->
                 <!--<div class="input-field col s10 offset-s1">-->
                     <!--<select id="sidebar-language">-->
-                        <!--<option value="en">English</option>-->
-                        <!--<option value="es">Español (Colombia)</option>-->
+                        <!--<option value="en">{{{__ "English"}}}</option>-->
+                        <!--<option value="es">{{{__ "Español"}}}</option>-->
                     <!--</select>-->
-                    <!--<label for="sidebar-language">Language</label>-->
+                    <!--<label for="sidebar-language">{{{__ "Language"}}}</label>-->
                 <!--</div>-->
             <!--</div>-->
         <!--</li>-->
 
-        <li><div class="divider"></div></li>
+        <!--<li><div class="divider"></div></li>-->
 
         <li>
             <div class="app-download-links">
