--- a/views/register.hbs
+++ b/views/register.hbs
@@ -81,7 +81,7 @@
                 </form>
                 <div class="row">
                     <div class="col s12 center-align">
-                        <span style="font-size:0.7rem;">{{{__ "By creating an account and logging in, I agree to the <a href="/terms-of-use" target="_blank">Terms of Use</a> and <a href="/privacy" target="_blank">Privacy Policy</a>."}}}</span>
+                        <span style="font-size:0.7rem;">{{{__ "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>."}}}</span>
                     </div>
                 </div>
             </div>
