Add a spanish login route (#295)

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,9 +13,9 @@
             <div class="card-action center-align">
                 <a href="/soles">{{{__ "My SOLEs"}}}</a>
                 <a href="/questions">{{{__ "Explore Questions"}}}</a>
-                <!--{{#if roleData.isAdmin }}-->
+                {{#if roleData.isAdmin }}
                     <a class="red-text" href="/admin">Admin</a>
-                <!--{{/if}}-->
+                {{/if}}
              </div>
         </div>
 
