Add i18n to the dropdown on the question search page. This is the first part to #306. Next the content needs to be translated to Spanish in the es.json object

--- a/views/partials/standard-picker.hbs
+++ b/views/partials/standard-picker.hbs
@@ -1,31 +1,31 @@
 <div class="row" id="standard-picker">
     <div class="col s12 m6">
-        <label>Subject</label>
+        <label>{{{__ "Subject"}}}</label>
         <select id="subject" name="subject" class="browser-default standard-picker">
-            <option value="" disabled selected>Filter by subject</option>
-            <option label="All subjects" value="all" >All Subjects</option>
+            <option value="" disabled selected>{{{__ "Filter by subject"}}}</option>
+            <option label="{{{__ "All subjects"}}}" value="all" >{{{__ "All Subjects"}}}</option>
             <!--<option label="AmeriCorps" value="asn.d0000003">AmeriCorps</option>-->
-            <option label="College Now" value="asn.d0000001">College Now</option>
+            <option label="{{{__ "College Now"}}}" value="asn.d0000001">{{{__ "College Now"}}}</option>
             <!--<option label="Community Health Worker Certification" value="asn.d0000002">Community Health Worker Certification</option>-->
-            <option label="Dance" value="asn.d2466234">Dance</option>
-            <option label="Drama/Theatre" value="asn.d2466454">Drama/Theatre</option>
-            <option label="English Language Arts (Common Core)" value="asn.d10003fc">English Language Arts (Common Core)</option>
-            <option label="HRSA (ACT test)" value="asn.d0000004">HRSA (ACT test)</option>
-            <option label="Mathematics (Common Core)" value="asn.d10003fb">Mathematics (Common Core)</option>
-            <option label="Music" value="asn.d2482974">Music</option>
-            <option label="Next Generation Science Standards" value="asn.d2454348">Next Generation Science Standards</option>
-            <option label="Physical Education" value="asn.d2716034">Physical Education</option>
-            <option label="Science (High School)" value="asn.d2692656">Science (High School)</option>
-            <option label="Science (K-8)" value="asn.d2462762">Science (K-8)</option>
-            <option label="Social Studies (High School)" value="asn.d2463176">Social Studies (High School)</option>
-            <option label="Social Studies (K-8)" value="asn.d2462866">Social Studies (K-8)</option>
-            <option label="Technology" value="asn.d2465259">Technology</option>
-            <option label="Visual Arts" value="asn.d2483255">Visual Arts</option>
-            <option label="World Languages" value="asn.d2483559">World Languages</option>
+            <option label="{{{__ "Dance"}}}" value="asn.d2466234">{{{__ "Dance"}}}</option>
+            <option label="{{{__ "Drama/Theatre"}}}" value="asn.d2466454">{{{__ "Drama/Theatre"}}}</option>
+            <option label="{{{__ "English Language Arts (Common Core)"}}}" value="asn.d10003fc">{{{__ "English Language Arts (Common Core)"}}}</option>
+            <option label="{{{__ "HRSA (ACT test)"}}}" value="asn.d0000004">{{{__ "HRSA (ACT test)"}}}</option>
+            <option label="{{{__ "Mathematics (Common Core)"}}}" value="asn.d10003fb">{{{__ "Mathematics (Common Core)"}}}</option>
+            <option label="{{{__ "Music"}}}" value="asn.d2482974">{{{__ "Music"}}}</option>
+            <option label="{{{__ "Next Generation Science Standards"}}}" value="asn.d2454348">{{{__ "Next Generation Science Standards"}}}</option>
+            <option label="{{{__ "Physical Education"}}}" value="asn.d2716034">{{{__ "Physical Education"}}}</option>
+            <option label="{{{__ "Science (High School)"}}}" value="asn.d2692656">{{{__ "Science (High School)"}}}</option>
+            <option label="{{{__ "Science (K-8)"}}}" value="asn.d2462762">{{{__ "Science (K-8)"}}}</option>
+            <option label="{{{__ "Social Studies (High School)"}}}" value="asn.d2463176">{{{__ "Social Studies (High School)"}}}</option>
+            <option label="{{{__ "Social Studies (K-8)"}}}" value="asn.d2462866">{{{__ "Social Studies (K-8)"}}}</option>
+            <option label="{{{__ "Technology"}}}" value="asn.d2465259">{{{__ "Technology"}}}</option>
+            <option label="{{{__ "Visual Arts"}}}" value="asn.d2483255">{{{__ "Visual Arts"}}}</option>
+            <option label="{{{__ "World Languages"}}}" value="asn.d2483559">{{{__ "World Languages"}}}</option>
         </select>
     </div>
     <div class="col s12 m6">
-        <label>Grade <span style="color: pink;" >(subject required)</span></label>
+        <label>{{{__ "Grade"}}} <span style="color: pink;" >{{{__ "(subject required)"}}}</span></label>
         <select id="grade" id="name" class="browser-default standard-picker" disabled>
             <option value=""></option>
         </select>
