updated notes field to use more detailed question

--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -254,7 +254,7 @@
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mode_edit</i>
                         <textarea name="notes" id="notes" class="materialize-textarea"></textarea>
-                        <label for="notes">{{{__ "Additional Notes for your Records"}}}</label>
+                        <label for="notes">{{{__ "What worked well during this SOLE? What didn't work well?"}}}</label>
                     </div>
                 </div>
 
