add colombia register and login route (#330)
add some custom logos for register and login pages based on rings

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -162,6 +162,9 @@ function initializeAutocomplete(){
     // bounds: defaultBounds,
     // regions: ['administrative_area1']
   };
+    {{#if config.colombia }}
+        options.componentRestrictions = {country: 'co'};
+    {{/if}}
   var autocomplete = new google.maps.places.Autocomplete(input, options);
 
 
