--- a/views/home.hbs
+++ b/views/home.hbs
@@ -49,6 +49,8 @@
     {{/if}}
 </div>
 
+{{#if config.language}}
 <script>
     document.cookie = 'language='+'{{config.language}}'; //save the language in the cookie
 </script>
+{{/if}}
