--- a/views/login.hbs
+++ b/views/login.hbs
@@ -49,7 +49,13 @@
                 </div>
                 <div class="row">
                     <div class="center col s12">
-                        {{{__ "Need an account?"}}} <a href="/register">{{{__ "Sign up here."}}}</a>
+
+                        {{#if ring.slug}}
+                            {{{__ "Need an account?"}}} <a href="/{{ring.slug}}/register">{{{__ "Sign up here."}}}</a>
+                        {{else}}
+                            {{{__ "Need an account?"}}} <a href="/register">{{{__ "Sign up here."}}}</a>
+                        {{/if}}
+
                     </div>
                     <div class="center col s12">
                         <br>
