Bugfix quick fixes colombia login register (#332)
* add a route for /colombia that redirects to /colombia/register
* make complete profile in spanish during colombia register

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -231,3 +231,9 @@ function validateInputs (event) {
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_4aqJcZYOl-dHZdtZSht3rOolk8JzO3I&libraries=places"></script>
+
+{{#if config.colombia }}
+<script>
+    document.cookie = 'language=es;path=/';
+</script>
+{{/if}}
