--- a/views/home.hbs
+++ b/views/home.hbs
@@ -51,6 +51,6 @@
 
 {{#if config.language}}
 <script>
-    document.cookie = 'language='+'{{config.language}}'; //save the language in the cookie
+    document.cookie = 'language='+'{{config.language}}' + ';path=/';
 </script>
 {{/if}}
