Fixed Youtube playlist link for trainers to redirect to new version of how to SOLE create a SOLE lesson plan tutorial.  Also added a little to es.json file using Google translate for now.

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -487,8 +487,8 @@
                                         <img src="/images/profile/gdoc.svg" alt="">
                                     </a>
 
-                                    <a href="https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4"
-                                       onclick="trackOutboundLink(event, 'https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4'); return false;"
+                                    <a href="https://www.youtube.com/watch?v=c_bdz1yNsCc&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4"
+                                       onclick="trackOutboundLink(event, 'https://www.youtube.com/watch?v=c_bdz1yNsCc&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
