made the ring logo responsive, it was not displaying properly on mobile which is where I think a lot of users will be access this in Colombia

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,7 +5,7 @@
 
             <div class="row center-align">
                 {{#if ring.logo}}
-                    <img src="/images/logos/{{ring.logo}}" height="165" alt="{{ring.fullName}}>
+                    <img class="responsive-img" src="/images/logos/{{ring.logo}}" height="165" alt="{{ring.fullName}}>
                 {{else}}
                     <video width="165" height="165" autoplay muted>
                     <source src="/images/logos/animated-logo-small.webm" type="video/webm">
