pass redirect url through login to redirect

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -93,7 +93,7 @@
 </div>
 
 <form id="login-with-session" action="/login" method="get">
-  <input type="hidden" name="redirectURL" id="redirectURL" value="{{redirectURL}}">
+  <input type="hidden" name="originalUrl" id="originalUrl" value="{{originalUrl}}">
 </form>
 
 
