--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -177,7 +177,7 @@
                         {{#if user.ceus}}
                             <p>{{{__ "/2000 points to your next CEU"}}}</p>
                         {{else}}
-                            <p><em>{{{__ "No points yet."}}} <a href="/sole-create">{{{__ "Create your first SOLE lesson plan and get points."}}}</a></em></p>
+                            <p><em>{{{__ "No points yet."}}} <a href="/soles/plan">{{{__ "Create your first SOLE lesson plan and get points."}}}</a></em></p>
                         {{/if}}
                     {{/if}}
 
@@ -194,7 +194,7 @@
                             {{/each}}
                         {{else}}
                             <li class="collection-item">
-                                <a href="/sole-create">
+                                <a href="/soles/plan">
                                     {{{__ "No CEUs ... yet! Create your first SOLE lesson plan & get points."}}}
                                 </a>
                             </li>
