--- a/views/questions-mine.hbs
+++ b/views/questions-mine.hbs
@@ -32,7 +32,7 @@
                             <div class="row"></div>
                             <div class="row center-align">
                                 <p>{{{__ "No questions yet!"}}}</p>
-                                <a href="/questions/add" class="waves-effect waves-light btn">{{{__ "Add A Question"}}}</a>
+                                <a href="/questions/new" class="waves-effect waves-light btn">{{{__ "Add A Question"}}}</a>
                             </div>
                         {{/if}}
                     </div>
