--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -30,7 +30,7 @@
         <div class="card-panel">
             <div class="alert alert-danger">{{ errorText }}</div>
             <div class="row" id="no-questions-submission" style="display: none">
-                <a href="questions/add/">
+                <a href="/questions/new/">
                     <div class="col s12 m8 offset-m2 l6 offset-l3">
                         <div class="card red lighten-1">
                             <div class="question-card card-content center-align">
