--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -84,7 +84,7 @@
                 </form>
             {{/if}}
 
-            <form id="reflect-form" method="post" action="/sole-reflect">
+            <form id="reflect-form" method="post" action="/soles/{{sole.id}}/reflect">
 
                 <input type="hidden" name="soleID" id="soleID" value="{{sole.id}}">
 
