--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -47,7 +47,7 @@
                                     <div class="row center-align">
                                         <img class="hide-on-small-only" src="/images/logos/logo.svg">
                                         <h5 style="margin-bottom: 1em;">{{{__ "Let's get started"}}}</h5>
-                                        <a class="waves-effect waves-light btn-large" href="/sole-create">{{{__ "Plan A Lesson"}}}</a>
+                                        <a class="waves-effect waves-light btn-large" href="/soles/plan">{{{__ "Plan A Lesson"}}}</a>
                                     </div>
                                 </div>
                             </div>
