--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,7 @@
             <div class="card-content center-align">
                 <img class="hide-on-small-only" src="/images/logos/logo.svg">
                 <h5 style="margin-bottom: 1em;">{{{__ "Let's get started"}}}</h5>
-                <a class="waves-effect waves-light btn-large" href="/sole-create">{{{__ "Plan A Lesson"}}}</a>
+                <a class="waves-effect waves-light btn-large" href="/soles/plan">{{{__ "Plan A Lesson"}}}</a>
                 <br><br>
             </div>
             <div class="card-action center-align">
