--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -26,14 +26,14 @@
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><li><a class="waves-effect waves-light btn" href="/sole-create">{{{__ "Plan Lesson"}}}</a></li></li>
+        <li><li><a class="waves-effect waves-light btn" href="/soles/plan">{{{__ "Plan Lesson"}}}</a></li></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>{{{__ "My Profile"}}}</a></li>
         <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>{{{__ "My SOLEs"}}}</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>{{{__ "Explore Questions"}}}</a></li>
         <li><a class="waves-effect" href="/questions/mine"><i class="material-icons">question_answer</i>{{{__ "My Questions"}}}</a></li>
-        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>{{{__ "Add a Question"}}}</a></li>
+        <li><a class="waves-effect" href="/questions/new"><i class="material-icons">create</i>{{{__ "Add a Question"}}}</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>{{{__ "How to SOLE"}}}</a></li>
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>{{{__ "History of StartSOLE"}}}</a></li>
