--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -1,12 +1,12 @@
     <div class="card-panel sole-card">
         <a href="/soles/{{id}}{{#ifEquals state "reflect"}}/reflect{{else ifEquals state
-                "completed"}}{{else}}/edit{{/ifEquals}}">
+                "completed"}}{{else}}/plan{{/ifEquals}}">
             <img src="/images/logos/sole-card-logo.jpg"
                  class="avatar-image hide-on-small-and-down">
         </a>
         <div class="question-text">
             <a href="/soles/{{id}}{{#ifEquals state "reflect"}}/reflect{{else ifEquals state
-                    "completed"}}{{else}}/edit{{/ifEquals}}"
+                    "completed"}}{{else}}/plan{{/ifEquals}}"
                class="black-text">
                 {{question.text}}
                 {{lessonplan}}
