--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="row">
-                <form action="/questions/add" method="post">
+                <form action="/questions/new" method="post">
                     <div class="row">
                         <div class="input-field col s12">
 
