--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -14,7 +14,7 @@
     <div class="col s12">
         <div class="card-panel">
             <form id="soles-add-form"
-                  action="{{#if sole.id}}/soles/{{sole.id}}/edit{{else}}/sole-create{{/if}}"
+                  action="/soles{{#if sole.id}}/{{sole.id}}{{/if}}/plan"
                   method="post">
               <input type="hidden" name="sole_id" value="{{sole.id}}">
               <div class="row" >
