Rename `soles-add` to `soles-plan`. And also some images aren't loading because the links aren't explicit (they were missing a slash at the beginning). Added slash to all of them. This closes #347

--- a/views/page-resources.hbs
+++ b/views/page-resources.hbs
@@ -37,7 +37,7 @@
                                 <div class="col m12 l6 resource-card-col show-all {{#each tags}}{{this}} {{/each}}">
                                     <div class="resource-card card horizontal">
                                         <div class="card-image">
-                                            <img src="images/resources/{{image}}">
+                                            <img src="/images/resources/{{image}}">
                                         </div>
                                         <div class="card-stacked">
                                             <div class="card-content">
@@ -61,7 +61,7 @@
                         <div class="col m12 l6 show-all">
                             <div class="resource-card card horizontal">
                                 <div class="card-image">
-                                    <img src="images/resources/your_resource_here.png">
+                                    <img src="/images/resources/your_resource_here.png">
                                 </div>
                                 <div class="card-stacked">
                                     <div class="card-content">
