--- a/views/soles-plan.hbs
+++ b/views/soles-plan.hbs
@@ -174,7 +174,7 @@
 
                                 <div class="row">
                                     <div class="col m4 right-align hide-on-small-only">
-                                        <img src="images/logos/question.png" alt="question">
+                                        <img src="/images/logos/question.png" alt="question">
                                     </div>
                                     <div class="col s12 m8">
                                         <div class="input-field inline">
@@ -188,7 +188,7 @@
                                         </div> {{{__ "minutes to introduce the question."}}}
                                     </div>
                                     <div class="col m4 right-align hide-on-small-only">
-                                        <img src="images/logos/investigate.png" alt="question">
+                                        <img src="/images/logos/investigate.png" alt="question">
                                     </div>
                                     <div class="col s12 m8">
                                         <div class="input-field inline">
@@ -201,7 +201,7 @@
                                         </div> {{{__ "minutes to for the investigation."}}}
                                     </div>
                                     <div class="col m4 right-align hide-on-small-only">
-                                        <img src="images/logos/review.png" alt="question">
+                                        <img src="/images/logos/review.png" alt="question">
                                     </div>
                                     <div class="col s12 m8">
                                         <div class="input-field inline">
