--- a/views/verify-email-failure.hbs
+++ b/views/verify-email-failure.hbs
@@ -2,7 +2,7 @@
     <div class="col s12 offset-m2 m8 offset-l3 l6">
         <div class="card-panel">
             <div class="row center-align">
-                <img class="responsive-img" src="images/404.jpg" alt="{{{__ "Error!"}}}">
+                <img class="responsive-img" src="/images/404.jpg" alt="{{{__ "Error!"}}}">
             </div>
             <div class="row">
                 <div class="col s12">
