--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,7 +5,9 @@
 
             <div class="row center-align">
                 {{#if ring.logo}}
-                    <img class="responsive-img" src="/images/logos/{{ring.logo}}" height="165" alt="{{ring.fullName}}>
+                    <div class="col s8 offset-s2">
+                        <img class="responsive-img" src="/images/logos/{{ring.logo}}" height="165" alt="{{ring.fullName}}">
+                    </div>
                 {{else}}
                     <video width="165" height="165" autoplay muted>
                     <source src="/images/logos/animated-logo-small.webm" type="video/webm">
