on colombia ring page, make login link work. closes #368

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -76,7 +76,7 @@
 
 
                         <div class="input-field col s12 center">
-                            {{{__ "Already have an account?"}}}  <a href="login">{{{__ "Login"}}}</a>
+                            {{{__ "Already have an account?"}}}  <a href="{{#if isColombia}}/colombia{{/if}}/login">{{{__ "Login"}}}</a>
                         </div>
                     </div>
                     <div class="row">
@@ -107,7 +107,7 @@
 </form>
 
 <form id="login-with-session" action="/" method="get">
-  <input type="hidden" name="redirectURL" id="redirectURL" value="{{redirectURL}}">
+  <input type="hidden" name="originalUrl" id="originalUrl" value="{{originalUrl}}">
 </form>
 
 <script id="facebook-jssdk" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10"></script>
