--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -43,9 +43,14 @@
 
 <script type="text/javascript">
   // connect to parse server
-  Parse.initialize(soleConfig.appId);
-  Parse.serverURL = soleConfig.serverUrl;
-  Parse.User.logOut();
-  document.cookie = "sessionToken=; Max-Age=0";//remove the sessionToken from the cookie
-  document.cookie = "language=; Max-Age=0";//remove the language from the cookie
+
+  document.addEventListener("DOMContentLoaded", function() {
+      Parse.initialize(soleConfig.appId);
+      Parse.serverURL = soleConfig.serverUrl;
+      Parse.User.logOut();
+      document.cookie = "sessionToken=; Max-Age=0";//remove the sessionToken from the cookie
+      document.cookie = "language=; Max-Age=0";//remove the language from the cookie
+
+      localStorage.clear();
+  });
 </script>
