--- a/views/register.hbs
+++ b/views/register.hbs
@@ -141,3 +141,15 @@ $("#initial-registration-form").submit(function (event) {
 });
 
 </script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        Parse.initialize(soleConfig.appId);
+        Parse.serverURL = soleConfig.serverUrl;
+        Parse.User.logOut();
+        document.cookie = "sessionToken=; Max-Age=0";//remove the sessionToken from the cookie
+        document.cookie = "language=; Max-Age=0";//remove the language from the cookie
+
+        localStorage.clear();
+    });
+</script>
