--- a/views/partials/profile/profile-card-manage-emails.hbs
+++ b/views/partials/profile/profile-card-manage-emails.hbs
@@ -7,18 +7,81 @@
             </div>
         </div>
 
-        <form id="profile-update-form" action="/profile/manage-emails" method="post">
-            <!--foreach subscriptions-->
+        <form action="/profile/manage-emails" method="post">
+            <!--ceuDoc-->
             <div class="row">
                 <div class="input-field col s12 m10 offset-m1">
                     <label>
-                        <input type="checkbox" name="emails-lesson-plans" id="emails-lesson-plans" class="filled-in" checked="checked" />
-                        <span>Lesson plans</span>
+                        <input type="checkbox" name="ceuDoc" id="ceuDoc"
+                        {{#if subscriptions.ceuDoc}}
+                               class="filled-in" checked="checked"
+                        {{/if}}
+                        />
+                        <span>{{{__ "New CEUs Awarded"}}}</span>
                     </label>
                 </div>
             </div>
-            <!--end foreach-->
+            <!--/ceuDoc-->
 
+            <!--questionTips-->
+            <div class="row">
+                <div class="input-field col s12 m10 offset-m1">
+                    <label>
+                        <input type="checkbox" name="questionTips" id="questionTips"
+                            {{#if subscriptions.questionTips}}
+                               class="filled-in" checked="checked"
+                            {{/if}}
+                        />
+                        <span>{{{__ "Question Tips"}}}</span>
+                    </label>
+                </div>
+            </div>
+            <!--/questionTips-->
+
+            <!--planningDoc-->
+            <div class="row">
+                <div class="input-field col s12 m10 offset-m1">
+                    <label>
+                        <input type="checkbox" name="planningDoc" id="planningDoc"
+                        {{#if subscriptions.planningDoc}}
+                               class="filled-in" checked="checked"
+                        {{/if}}
+                        />
+                        <span>{{{__ "Lesson Plan Documents"}}}</span>
+                    </label>
+                </div>
+            </div>
+            <!--/planningDoc-->
+
+            <!--summaryDoc-->
+                <div class="row">
+                    <div class="input-field col s12 m10 offset-m1">
+                        <label>
+                            <input type="checkbox" name="summaryDoc" id="summaryDoc"
+                            {{#if subscriptions.summaryDoc}}
+                                   class="filled-in" checked="checked"
+                            {{/if}}
+                            />
+                            <span>{{{__ "Lesson Summary Documents"}}}</span>
+                        </label>
+                    </div>
+                </div>
+            <!--/summaryDoc-->
+
+            <!--reflectionReminders-->
+            <div class="row">
+                <div class="input-field col s12 m10 offset-m1">
+                    <label>
+                        <input type="checkbox" name="reflectionReminders" id="reflectionReminders"
+                            {{#if subscriptions.reflectionReminders}}
+                               class="filled-in" checked="checked"
+                            {{/if}}
+                        />
+                        <span>{{{__ "Reflection Reminders"}}}</span>
+                    </label>
+                </div>
+            </div>
+            <!--/reflectionDoc-->
             <div class="row center-align">
                 <button class="btn waves-effect waves-light"
                         type="submit">
