--- a/views/soles-plan.hbs
+++ b/views/soles-plan.hbs
@@ -135,7 +135,7 @@
                            required
                            class="validate"
                            value="{{sole.num_students}}">
-                    <label for="num_students">How many students?</label>
+                    <label for="num_students">{{{__ "How many students?"}}}</label>
                     <span class="helper-text" data-error="{{{__ "SOLEs need at least 4 students"}}}"></span>
                 </div>
                 <!--number of devices-->
